compressed images & add wa,tg

--- a/index.html
+++ b/index.html
@@ -180,11 +180,22 @@
           <p>Israel, Ganne Tiqwa, Derekh HaTikva, 27</p>
           <h3>Phone:</h3>
           <p>+972 54-616-40-16</p>
+          <a
+            href="mailto:i.s.zadorina@gmail.com"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="contacts__social-link"
+          >
+            <img
+              src="./images/email.png"
+              alt="LinkedIn logo"
+              class="contacts__social-icon"
+            />
+            i.s.zadorina@gmail.com
+          </a>
         </div>
 
         <div class="contacts__col">
-          <h3>E-mail:</h3>
-          <p>i.s.zadorina@gmail.com</p>
           <a
             href="https://www.linkedin.com/in/irina-developer/"
             target="_blank"
@@ -211,6 +222,30 @@
             />
             GitHub
           </a>
+          <a
+            href="https://wa.me/972546164016"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="contacts__social-link"
+          >
+            <img
+              src="./images/whatsapp.png"
+              alt="LinkedIn logo"
+              class="contacts__social-icon"
+            />Whatsapp
+          </a>
+          <a
+            href="https://t.me/irinazadorina"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="contacts__social-link"
+          >
+            <img
+              src="./images/telegram.png"
+              alt="LinkedIn logo"
+              class="contacts__social-icon"
+            />Telegram</a
+          >
         </div>
       </div>
     </article>
